--- a/src/assets/stylus/modules/section.styl
+++ b/src/assets/stylus/modules/section.styl
@@ -1,4 +1,33 @@
 .section {
   width 100%
   min-height 100vh
+  display flex
+  align-items center
+  justify-content center
+  font-family 'Arimo', sans-serif
+
+  p {
+    font-size 1.2rem
+    margin $space-xs 0
+  }
+
+  a {
+    color #229955
+
+    &:hover {
+      color darken(#229955, 50%)
+      text-decoration underline
+    }
+  }
+
+  &:nth-child(2),
+  &:nth-child(4),
+  &:nth-child(6) {
+    background-color #332211
+    color #ddccbb
+
+    blockquote {
+      color #4a4a4a
+    }
+  }
 }
