--- a/src/assets/stylus/components/columns.styl
+++ b/src/assets/stylus/components/columns.styl
@@ -9,6 +9,11 @@
   .column__left,
   .column__right {
 
+    .date {
+      font-weight 600
+      font-size 1.1em
+    }
+
     @media (min-width $tablet + 1px) {
       padding $space
     }
