--- a/src/assets/stylus/modules/main.styl
+++ b/src/assets/stylus/modules/main.styl
@@ -1,5 +1,6 @@
 .main {
   background-color: #ddccbb
+  overflow hidden
   @media (min-width: $tablet + 1px) {
     position relative
     top 100vh
