--- a/src/assets/stylus/utilities/spaces.styl
+++ b/src/assets/stylus/utilities/spaces.styl
@@ -2,4 +2,4 @@ $space ?= 20px
 $space-xs ?= $space / 4
 $space-sm ?= $space / 2
 $space-md ?= $space + 10px
-$space-xls ?= $space * 2
+$space-xlg ?= $space * 2
