--- a/src/assets/stylus/modules/section.styl
+++ b/src/assets/stylus/modules/section.styl
@@ -40,6 +40,10 @@
     background-color #332211
     color #ddccbb
 
+    hr {
+      background-color #ddccbb
+    }
+
     blockquote {
       color #4a4a4a
     }
