--- a/src/assets/stylus/modules/header.styl
+++ b/src/assets/stylus/modules/header.styl
@@ -4,7 +4,7 @@
   position relative
 
   @media (min-width: $tablet + 1px) {
-    background url('../img/header.png') no-repeat
+    background url('../img/header.jpeg') no-repeat
     background-size cover
   }
 
